Ex u test with mokito and use of service classes (#3)
* Small changes, like emptes lines removed, code reformat.

* Add StudentService to StudentController and CourseController

* add Tests for CourseRepository, StudentRepository and StudentService